# muon-cooling

./: .bash_profile  .gitignore  README.md  TraceParticle.txt  emittance.ipynb  icool_to_g4bl.py  open.py  out10.txt  out11.txt  out15.txt  out18.txt  out19.txt  out2.txt  out20.txt  out22.txt  out27.txt  out30.txt  out6.txt  outlast.txt  paper_x_vs_z.csv  plot-beam-profile.ipynb  plot-input.py  plot-reference-particle.ipynb  plot-solenoid-current.py  plotter.ipynb  sample_path.py  test-emittance.ipynb  x.csv
3DPaths/: open.py
Automate-G4bl/: automate_g4bl.py  detectors.txt  out1.txt  out11.txt  out12.txt  out14.txt  out15.txt  out16.txt  out18.txt  out2.txt  out22.txt  out23.txt  out24.txt  out26.txt  out27.txt  out28.txt  out29.txt  out3.txt  out30.txt  out31.txt  out8.txt  temp_plot.py  track_v7.in
Converted-ICOOL-File/: Gas-Filled HFOFO.docx  detectors.txt  g4bl.out  icool_to_g4bl.py  out12.txt  out17.txt  out21.txt  out26.txt  out28.txt  out29.txt  out3.txt  out31.txt  plot.py  track_v7.in
ECALC9/: ecalc9.out  emitcalc.out  plot_ecalc9.ipynb  read_ecalc9.py
G4beamline-3.06-source/: CMakeCache.txt  CMakeLists.txt  MPI.cmake
G4beamline-3.06-source/Resources/: qt.conf
G4beamline-3.06-source/doc/: BUILD.txt  Doxyfile  History.txt  README.txt  footer  mainpage.md
G4beamline-3.06-source/examples/: Example1.g4bl  ExampleN02.g4bl  FieldLines.g4bl  Idealized_g-2.g4bl  MICE_StageVI.g4bl  Movie.in  MultipleScattering.g4bl  SampleMovie.g4bl  SpaceCharge.g4bl  Study2Cooling.g4bl  TungstenTarget.g4bl  emittancematch.sh  g4bl.out  triplet.sh
G4beamline-3.06-source/examples/Magnets/: DecaySolenoid  RALBend1
G4beamline-3.06-source/examples/Windows/: H2-Bellow-Window-concave-convex-coord-2 (1) - TJR.xls  H2-Bellow-Window-concave-convex-coord-2 (1).xls  H2-Bellow-Window-concave-convex-coord-3.xls  abs360  safe480  testwin
G4beamline-3.06-source/finalize/: CMakeLists.txt
G4beamline-3.06-source/g4bl/: BLAlarm.cc  BLAlarm.hh  BLAssert.hh  BLBeam.hh  BLCMDabsorber.cc  BLCMDbeam.cc  BLCMDbeamlossntuple.cc  BLCMDboolean.cc  BLCMDbox.cc  BLCMDbug1021.cc  BLCMDcoil.cc  BLCMDcollective.cc  BLCMDcorner.cc  BLCMDcornerarc.cc  BLCMDcosmicraybeam.cc  BLCMDdefine.cc  BLCMDdemo.cc  BLCMDdetector.cc  BLCMDdo.cc  BLCMDelementdb.cc  BLCMDemfactor.cc  BLCMDendgroup.cc  BLCMDeventcuts.cc  BLCMDexit.cc  BLCMDexpandworld.cc  BLCMDextrusion.cc  BLCMDfieldexpr.cc  BLCMDfieldlines.cc  BLCMDfieldmap.cc  BLCMDfieldntuple.cc  BLCMDfor.cc  BLCMDg4ui.cc  BLCMDgenericbend.cc  BLCMDgenericquad.cc  BLCMDgenericsectorbend.cc  BLCMDgeometry.cc  BLCMDgroup.cc  BLCMDhelicaldipole.cc  BLCMDhelicalharmonic.cc  BLCMDhelp.cc  (+147 more)
G4beamline-3.06-source/g4bl/UNUSED/: G4OpenGLSceneHandler.cc  Util.cc
G4beamline-3.06-source/g4bl/UNUSED/OLD/: BLCMDlabel.cc  BLCMDparticlecolor.cc  BLQtToolBar.cc  BLQtToolBar.h  G4ExtrudedSolid.cc  G4ProcessManager.cc  G4SteppingManager.cc  G4SteppingManager2.cc  G4UrbanMscModel.cc  G4VEnergyLossProcess.cc  G4VMultipleScattering.cc  G4VisCommandsSceneHandler.cc  G4WentzelOKandVIxSection.cc  G4WentzelVIModel.cc  G4WentzelVIRelModel.cc
G4beamline-3.06-source/g4bldata/: CMakelists.txt  G4blDataWindow.cc  G4blDataWindow.h  Reader.cc  Reader.h  g4bldata.cc
G4beamline-3.06-source/g4bldata/BAK/: CMakeLists.txt  G4blDataWindow.cc  G4blDataWindow.cc.bak  G4blDataWindow.h  Qt4CMakelists.txt  Qt5CMakeLists.txt  Reader.cc  Reader.h  g4bldata.cc  g4bldata.pro
G4beamline-3.06-source/g4blgui/: CMakelists.txt  G4blGuiWindow.cc  G4blGuiWindow.h  Qt4CMakeLists.txt  Qt5CMakeLists.txt  RecentFile.cc  RecentFile.h  g4blgui.cc  g4blgui.pro
G4beamline-3.06-source/g4blmpi/: CMakelists.txt  g4blmpi.cc
G4beamline-3.06-source/g4bltest/: CMakelists.txt  g4bltest.cc
G4beamline-3.06-source/scripts/: G4beamline-3.02.aip  G4beamline-3.02.back.aip  G4beamline-3.02a.aip  G4beamline-3.03.aip  G4beamline-3.04.aip  G4beamline-3.06.aip  G4beamline-3.06.back.aip  G4beamline.aip  distrib-darwin  distrib-linux  linux_libraries  macosx_libraries  make-help  source-distrib
G4beamline-3.06-source/scripts/UNUSED/: distrib-WIN32  make-help
G4beamline-3.06-source/share/g4beamline/: G4blDataIcon.icns  G4blGuiInstructions.html  G4blMovie.C  Help.html  g4blicon.icns  viewer.def
G4beamline-3.06-source/share/g4beamline/ConstructG4blicon/: 3MagnetCapture.tiff  g4blicon.in
G4beamline-3.06-source/test/: test000  test001  test002  test003  test004  test005  test006  test007  test008  test009  test010  test011  test012  test013  test014  test015  test016  test017  test018  test019  test020  test021  test022  test023  test024  test025  test026  test027  test028  test029  test030  test031  test032  test033  test034  test035  test036  test037  test038  test039  (+71 more)
G4beamline-3.06-source/validation/: bend.g4bl  chaos.g4bl  collective.g4bl  dataio.g4bl  decay.g4bl  eloss.g4bl  fieldexpr.g4bl  fieldmap.B  fieldmap.g4bl  g-2.g4bl  helicaldipole.g4bl  helmholtz.g4bl  material.g4bl  mudecay.g4bl  multipole.g4bl  muscat.g4bl  pidecay.g4bl  pillbox.g4bl  placement.g4bl  quad.g4bl  sectorbend.g4bl  solenoid.g4bl  straggling.g4bl  straggling2.g4bl  transport.g4bl  visualization.g4bl
HFOFO G4bl/: g4bl.out
HFOFO-G4bl/: g4bl.out  out1.txt  out13.txt  out14.txt  out16.txt  out23.txt  out24.txt  out25.txt  out4.txt  out5.txt  out7.txt  out8.txt  out9.txt  plot.py  track_v7.in
HFOFO-G4bl-Frozen/: g4bl.out
HFOFO-G4bl-Test/: ReferenceParticle.txt  TuneParticle.txt  g4bl.out  out1.txt  out10.txt  out11.txt  out12.txt  out13.txt  out14.txt  out15.txt  out16.txt  out17.txt  out18.txt  out19.txt  out2.txt  out20.txt  out21.txt  out22.txt  out23.txt  out24.txt  out25.txt  out26.txt  out27.txt  out28.txt  out29.txt  out3.txt  out30.txt  out31.txt  out4.txt  out5.txt  out6.txt  out7.txt  out8.txt  out9.txt  outlast.txt  profile.txt  profile_c.txt  profile_r.txt  track_v7.in
More-Detectors-Sim/: abs_place7_31.txt  detector-config.py  detector-config.txt  detectors.txt  plot_more_detectors_sim.ipynb  track_v7.in
Paper-Data/: paper_Dx_vs_z.csv  paper_Dy_vs_z.csv  paper_emitlong_vs_z.csv  paper_emittrans2_vs_z.csv
RF-Test/: automate_g4bl.py  (+2 more)
(+3615 files in other folders)
